--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--use layout tag to enable data binding-->
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!--use constraintlayout because its amazing flexibility & power to arrange items-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,10 +22,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.110000014" />
+            app:layout_constraintVertical_bias="0.19999999" />
 
         <TextView
-            android:id="@+id/welcome_label"
+            android:id="@+id/login_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -50,7 +54,7 @@
             app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/email_edit_text"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_label" />
+            app:layout_constraintTop_toBottomOf="@+id/login_label" />
 
         <TextView
             android:id="@+id/password_label"
@@ -88,14 +92,15 @@
             app:layout_constraintTop_toBottomOf="@+id/password_label" />
 
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/login_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />
+            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
+            style="@style/button_style" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
