--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -31,4 +31,18 @@
         <item name="android:textStyle">italic</item>
     </style>
 
+    <style name="button_style">
+        <item name="android:backgroundTint">@color/mainColor</item>
+        <item name="android:paddingStart">32dp</item>
+        <item name="android:paddingEnd">32dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="welcome_text_style">
+        <item name="android:fontFamily">@font/aclonica</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/secondColor</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
 </resources>
