--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -45,4 +45,11 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="paragraph_style">
+        <item name="android:textAlignment">viewStart</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
