--- a/starter/app/src/main/res/values/styles.xml
+++ b/starter/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/aclonica</item>
         <item name="android:textColor">@color/mainColor</item>
+        <item name="android:textAlignment">center</item>
         <item name="android:textSize">48sp</item>
         <item name="android:textStyle">bold</item>
     </style>
