--- a/starter/app/src/main/res/layout/fragment_instruction.xml
+++ b/starter/app/src/main/res/layout/fragment_instruction.xml
@@ -21,7 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13" />
+        app:layout_constraintVertical_bias="0.18" />
 
     <TextView
         android:id="@+id/instruction_text_2"
@@ -37,7 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/instruction_text_1"
-        app:layout_constraintVertical_bias="0.13" />
+        app:layout_constraintVertical_bias="0.23000002" />
 
     <Button
         android:id="@+id/instructions_next_button"
@@ -45,12 +45,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/next_button"
+        android:text="@string/getting_started"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.84"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/instruction_text_2" />
+        app:layout_constraintTop_toBottomOf="@+id/instruction_text_2"
+        app:layout_constraintVertical_bias="0.84000003"
+        tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
