--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -6,67 +6,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!--use constraintlayout because its amazing flexibility & power to arrange items-->
+    <!--use LinearLayout because this simple linear view-->
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
         tools:context=".LoginFragment">
 
 
         <TextView
             android:id="@+id/welcome_logo"
             style="@style/shoe_store_logo"
-            android:text="@string/app_name_welcome"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.19999999" />
+            android:text="@string/app_name_welcome" />
 
         <TextView
             android:id="@+id/login_label"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             android:background="@color/mainColor"
             android:padding="16dp"
             android:text="@string/welcome_label"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/welcome_logo"
-            app:layout_constraintVertical_bias="0.06999999" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/email_label"
             style="@style/login_label_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="@string/email_label"
-            app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/email_edit_text"
-            app:layout_constraintTop_toBottomOf="@+id/login_label" />
-
-        <TextView
-            android:id="@+id/password_label"
-            style="@style/login_label_style"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/password_label"
-            app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/password_edit_text"
-            app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />
+            android:text="@string/email_label" />
 
         <EditText
             android:id="@+id/email_edit_text"
@@ -75,10 +48,17 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="@string/email_hint"
-            android:inputType="textEmailAddress"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email_label" />
+            android:textAlignment="center"
+            android:inputType="textEmailAddress" />
+
+        <TextView
+            android:id="@+id/password_label"
+            style="@style/login_label_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/password_label" />
+
 
         <EditText
             android:id="@+id/password_edit_text"
@@ -86,22 +66,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:ems="10"
-            android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_label" />
+            android:hint="********"
+            android:textAlignment="center"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/next_button"
+            style="@style/button_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/login_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
-            style="@style/button_style" />
+            android:text="@string/login_text" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </layout>
