--- a/starter/app/src/main/res/layout/fragment_list.xml
+++ b/starter/app/src/main/res/layout/fragment_list.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ListFragment">
+        tools:context=".views.ListFragment">
 
         <ScrollView
             android:layout_width="match_parent"
