--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -18,9 +18,9 @@
 
         <TextView
             android:id="@+id/welcome_logo"
+            style="@style/shoe_store_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/shoe_store_logo"
             android:text="@string/app_name_welcome" />
 
         <TextView
@@ -50,8 +50,8 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="@string/email_hint"
-            android:textAlignment="center"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/password_label"
@@ -69,8 +69,8 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="********"
-            android:textAlignment="center"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textAlignment="center" />
 
         <Button
             android:id="@+id/next_button"
