--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -80,6 +80,14 @@
             android:layout_marginTop="16dp"
             android:text="@string/login_text" />
 
+        <Button
+            android:id="@+id/next_button2"
+            style="@style/button_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/register_text" />
+
     </LinearLayout>
 
 </layout>
